tests/negative/traits/virtual-params-refers-to-self.orng
trait Lol {
    virtual fn lol(x: Self, y: Self) -> ()
}